GNOME Bugzilla – Bug 627249
Fix enrolling with Upek Eikon II fingerprint reader
Last modified: 2010-08-19 16:57:46 UTC
As now available in libfprint
Created attachment 168185 [details] [review] Fix enrolling with Upek Eikon II fingerprint reader
Can you add a little comment about why the extra two enroll stages are needed?
(In reply to comment #2) > Can you add a little comment about why the extra two enroll stages are needed? Because the hardware requires them. I wrongly assumed that "at worst" the readers would need just 3 enrollment stages, turns out that's wrong.
Committed with a better commit message. Attachment 168185 [details] pushed as 58a4b4a - Fix enrolling with Upek Eikon II fingerprint reader