Fix enrolling with Upek Eikon II fingerprint reader

The upeke2 driver in libfprint (and the device) requires 5
enrollment stages, but the UI has a hard-coded maximum of 3.
Increase the maximum to 5.

https://bugzilla.gnome.org/show_bug.cgi?id=627249